--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "Triangulet bot",
   "version": "2.1.3",
   "description": "Triangulet bot by blob_Raccoon",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.cjs",
+  "type": "common",
   "engines": {
     "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "node index.cjs",
+    "dev": "node --watch index.cjs"
   },
   "dependencies": {
     "ws": "^8.18.0"
