--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-{
-  "name": "Triangulet bot",
-  "version": "2.1.3",
-  "description": "Triangulet bot by blob_Raccoon",
-  "main": "index.js",
-  "type": "module",
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
-  },
-  "dependencies": {
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@types/ws": "^8.5.10"
-  }
-}
+fuck you if you try to copy my bot
